--- a/OrderApp/android/app/build.gradle
+++ b/OrderApp/android/app/build.gradle
@@ -228,6 +228,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('my-key-mrapp-cus.keystore')
+            storePassword 'huynguyen'
+            keyAlias 'my-key-mrapp-cus'
+            keyPassword 'huynguyen'
+        }
     }
     buildTypes {
         debug {
@@ -236,7 +242,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
