--- a/OrderApp/package.json
+++ b/OrderApp/package.json
@@ -10,11 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-firebase/app": "^15.0.0",
+    "@react-native-firebase/messaging": "^15.0.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-device-info": "^9.0.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
